# Coklu-Video-Indirme-Programi-AI-

./: .editorconfig  .gitignore  Multi Video Downloader 2026.py  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
src/: __init__.py  app.py  config.py  database.py  downloader.py  job_manager.py  utils.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_utils.py
